fixed an error where anchor tag display wrong color for unvisited pages

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -33,6 +33,7 @@ header nav {
             font-weight: bold;
             text-decoration: none;
             text-transform: uppercase;
+            color: white;
 
             &:hover {
                 text-decoration: underline;
